# Neural-Network-From-Scratch

./: .gitignore  CMakeLists.txt  README.md  data_utils.hpp  main  main.cpp  nn.cpp  nn.hpp  nn_layers.hpp  nn_utils.hpp  ops_utils.hpp  optimizer.hpp  run_main.sh
